src/index.sass
body
  margin: 0
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale
  background-color: #e7f6ff
  font-family: 'inter', system-ui

.wrapper
  max-width: 1080px
  min-height: calc(100vh - 85px)
  background: #FFFFFF
  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04)
  border-radius: 20px
  margin: 85px auto
  display: flex
  flex-direction: column

.overlay
  width: 100vw
  height: 100vh
  position: fixed
  top: 0
  left: 0
  z-index: 100
  background-color: rgba(0,0,0,.5)

.drawer
  max-width: 385px
  width: 100%
  height: 100vh
  padding: 32px 30px 30px
  background-color: #fff
  position: absolute
  right: 0
  top: 0
  box-sizing: border-box
  display: flex
  flex-direction: column
  &-top
    display: flex
    justify-content: space-between
    align-items: center
    margin-bottom: 30px
    &__button
      flex-shrink: 0
      &:hover
        box-shadow: 1px 2px 8px rgba(0, 0, 0, .09)
        path
          fill: #6FCF97
      path
        fill: #D3D3D3
  h2
    margin: 0
    font-size: 24px
  &-list
    flex-grow: 1
    overflow: auto
    box-sizing: border-box
    margin: 0 -10px 20px 0
    padding-right: 10px
    scrollbar-width: 5px
    scrollbar-color: #9DD458 #e7e7e7
    &::-webkit-scrollbar
      width: 5px
      background-color: #e7e7e7
    &::-webkit-scrollbar-thumb
      background-color: #6FCF97
      border-radius: 7px
      width: 5px
  &-item
    padding: 24px 20px
    display: flex
    align-items: center
    border: 1px solid #F3F3F3
    border-radius: 20px
    & + &
      margin-top: 20px
    &__img
      width: 70px
      height: 70px
      margin-right: 20px
    &__info
      margin-right: 12px
      p
        margin: 0 0 8px
        font-size: 14px
      b
        font-size: 14px
    &__button
      flex-shrink: 0
      &:hover
        box-shadow: 1px 2px 8px rgba(0, 0, 0, .09)
        path
          fill: #6FCF97
      path
        fill: #D3D3D3
  &-bottom
    ul
      margin: 0 0 24px
      padding: 0
      list-style: none
    li
      display: flex
      align-items: flex-end
      & + li
        margin-top: 20px
      span
        font-size: 16px
      div
        flex-grow: 1
        border-bottom: 2px dashed #DFDFDF
        margin: 0 8px
        position: relative
        top: -3px
      b
        font-weight: 600
        font-size: 16px
.info
  display: flex
  flex-direction: column
  justify-content: center
  align-items: center
  flex-grow: 1
  & > img
    margin-bottom: 21px
  strong
    font-size: 22px
    font-weight: 600
  p
    margin: 9px 0 40px
    font-size: 16px
    line-height: 24px
    opacity: .4
    text-align: center
  &-link
    text-decoration: none

.header
  display: flex
  justify-content: space-between
  align-items: center
  padding: 40px
  border-bottom: 1px solid #eaeaea
  &-logo
    text-decoration: none
    color: inherit
    display: flex
    align-items: center
    img
      margin-right: 16px
    h3
      text-transform: uppercase
      margin: 0
    p
      opacity: .5
      margin: 0
  &-list
    display: flex
    align-items: center
    list-style: none
    padding: 0
    margin: 0
    &__item
      & + &
        margin-left: 30px
      button, & a
        display: flex
        align-items: center
        background: 0
        border: 0
        padding: 0
        margin: 0
        line-height: 0
        cursor: pointer
        &:hover svg path
          stroke: #6FCF97
      svg path
        stroke: #9B9B9B
        transition: stroke .2s ease-out
      span
        margin-left: 10px

.content
  padding: 40px
  display: flex
  flex-grow: 1
  flex-direction: column
  &-top
    display: flex
    justify-content: space-between
    align-items: center
    margin-bottom: 40px
  .title
    margin: 0
  .search
    max-width: 250px
    flex-grow: 1
    &-input
      border: 1px solid #f3f3f3
      border-radius: 10px
      order: 1
      width: 100%
      box-sizing: border-box
      font-size: 14px
      font-family: 'Inter', system-ui
      line-height: 17px
      outline: none
      margin-left: 8px
      padding: 13px 8px 15px 46px
      background: url('../public/img/icons/search.svg') no-repeat 18px center
      transition: border-color .2s ease-out, background-image .2s ease-out
      &::placeholder
        color: #C4C4C4
      &:focus
        background-image: url('../public/img/icons/search-focus.svg')
        border-color: #6FCF97
      &:not(:placeholder-shown)
        background-image: url('../public/img/icons/search-focus.svg')
        border-color: #6FCF97
  &-empty
    flex-grow: 1
    display: flex
    justify-content: center
    align-items: center

.btn-32
  box-sizing: border-box
  border: 1px solid #F8F8F8
  border-radius: 7px
  background-color: #fff
  padding: 0
  width: 32px
  height: 32px
  cursor: pointer
  transition: box-shadow .2s linear
  &:disabled
    opacity: 9
    cursor: default
  &.bxsh:hover
    box-shadow: 1px 3px 10px -3px rgba(0, 0, 0, 0.15)
  path
    transition: stroke .2s ease-out, fill .2s ease-out
  svg
    vertical-align: middle

@keyframes disabled__loading
  0%
    opacity: 1
  100%
    opacity: .7

.btn-w-arrow
  min-width: 245px
  text-align: center
  position: relative
  display: flex
  align-items: center
  justify-content: center
  box-sizing: border-box
  padding: 18px 20px
  background: #9DD458
  color: #fff
  border: 0
  border-radius: 18px
  font-size: 16px
  font-weight: 600
  cursor: pointer
  transition: background-color .2s ease-out
  &.grow
    width: 100%
  &:hover
    background-color: #a1d85c
    img
      transform: translateX(-5px)
  &.arr-right
    img
      left: auto
      right: 30px
      transform-origin: center
      transform: rotateZ(180deg)
    &:hover img
      transform: rotateZ(180deg) translateX(-5px)
  img
    position: absolute
    left: 30px
    transition: transform .2s ease-in-out
  &[disabled]
    animation: disabled__loading .5s ease-out infinite alternate-reverse
    background-color: #D3D3D3 !important
    cursor: wait !important    

.sneakers
  display: flex
  flex-wrap: wrap
  margin: -20px -15px

.orders
  margin: 0
  flex-direction: column

.order
  & + &
    margin-top: 20px
  &-list
    display: flex
    flex-wrap: wrap
    margin: -20px -15px

